--- a/configs/baseline.yaml
+++ b/configs/baseline.yaml
@@ -1,11 +1,11 @@
 # Baseline LoRA config (no gating) for comparison
 
 model:
-  name: google/gemma-2-2b-it
+  name: google/gemma-3-1b-it
   use_flash_attention_2: true
 
 training:
-  output_dir: ./outputs/baseline_gemma_4b
+  output_dir: ./outputs/baseline_gemma3_1b_it
   num_train_epochs: 1
   max_steps: 12000
   per_device_train_batch_size: 4
@@ -46,7 +46,7 @@ lora:
   task_type: CAUSAL_LM
 
 slora:
-  enable: false  # Disable gating for baseline
+  enable: false # Disable gating for baseline
 
 data:
   dataset_name: ai2-tulu/tulu-3-sft-mixture
@@ -59,5 +59,5 @@ data:
 logging:
   use_wandb: true
   wandb_project: slora
-  wandb_run_name: baseline_gemma_4b
+  wandb_run_name: baseline_gemma3_1b_it
   report_to: wandb
