--- a/configs/full_gemma3_12b_it.yaml
+++ b/configs/full_gemma3_12b_it.yaml
@@ -1,7 +1,7 @@
 # Full experiment config: Gemma-3-12B on 400k Tülu-3
 
 model:
-  name: google/gemma-2-9b-it  # Using gemma-2-9b-it as placeholder
+  name: google/gemma-3-12b-it # Using gemma-3-12b-it as placeholder
   use_flash_attention_2: true
   load_in_4bit: true
   bnb_4bit_compute_dtype: bfloat16
@@ -9,7 +9,7 @@ model:
   bnb_4bit_use_double_quant: true
 
 training:
-  output_dir: ./outputs/full_gemma_12b
+  output_dir: ./outputs/full_gemma3_12b_it
   num_train_epochs: 1
   per_device_train_batch_size: 2
   gradient_accumulation_steps: 32
@@ -68,5 +68,5 @@ data:
 logging:
   use_wandb: true
   wandb_project: slora
-  wandb_run_name: full_gemma_12b
+  wandb_run_name: full_gemma3_12b_it
   report_to: wandb
