--- a/configs/quick_gemma3_1b_it.yaml
+++ b/configs/quick_gemma3_1b_it.yaml
@@ -10,7 +10,7 @@ training:
   max_steps: 12000
   per_device_train_batch_size: 4
   gradient_accumulation_steps: 16
-  gradient_checkpointing: true
+  gradient_checkpointing: false
   learning_rate: 2.0e-5
   lr_scheduler_type: cosine
   warmup_ratio: 0.03
