--- a/configs/accelerate_config.yaml
+++ b/configs/accelerate_config.yaml
@@ -1,7 +1,7 @@
 compute_environment: LOCAL_MACHINE
 debug: false
 distributed_type: MULTI_GPU
-downcast_bf16: 'no'
+downcast_bf16: "no"
 enable_cpu_affinity: false
 gpu_ids: all
 machine_rank: 0
@@ -15,4 +15,4 @@ tpu_env: []
 tpu_use_cluster: false
 tpu_use_sudo: false
 use_cpu: false
-ddp_find_unused_parameters: false
+find_unused_parameters: false
