--- a/configs/quick_gemma3_1b_it.yaml
+++ b/configs/quick_gemma3_1b_it.yaml
@@ -7,9 +7,9 @@ model:
 training:
   output_dir: ./outputs/quick_gemma3_1b_it
   num_train_epochs: 1
-  max_steps: 1000
-  per_device_train_batch_size: 2
-  gradient_accumulation_steps: 32
+  max_steps: 100
+  per_device_train_batch_size: 4
+  gradient_accumulation_steps: 16
   gradient_checkpointing: false
   learning_rate: 2.0e-5
   lr_scheduler_type: cosine
@@ -23,7 +23,7 @@ training:
   save_steps: 2000
   save_total_limit: 2
   evaluation_strategy: steps
-  eval_steps: 300
+  eval_steps: 30
   load_best_model_at_end: false
   seed: 42
   dataloader_num_workers: 4
@@ -53,6 +53,7 @@ slora:
   burn_in: 20
   seed: 0
   reorth_every: 12
+  k_topk: 64
 
 data:
   dataset_name: allenai/tulu-3-sft-mixture
