--- a/configs/quick_gemma3_1b_it.yaml
+++ b/configs/quick_gemma3_1b_it.yaml
@@ -49,7 +49,8 @@ slora:
   enable: true
   m: 512
   k: 64
-  tau_n: 0.30
+  min_novelty: 0.10
+  accept_prob: 0.70
   burn_in: 20
   seed: 0
   reorth_every: 12
