--- a/configs/full_gemma3_12b_it.yaml
+++ b/configs/full_gemma3_12b_it.yaml
@@ -52,9 +52,9 @@ slora:
   enable: true
   m: 512
   k: 64
-  accept_prob: 0.30
-  accept_prob_scaler: 10.0
-  accept_ema_rate: 0.01
+  target_novelty: 0.08
+  novelty_scaler: 10.0
+  novelty_ema_rate: 0.01
   burn_in: 3000
   seed: 0
   reorth_every: 128
