reduced code bloat

--- a/configs/quick_gemma3_1b_it.yaml
+++ b/configs/quick_gemma3_1b_it.yaml
@@ -47,16 +47,16 @@ lora:
 
 slora:
   enable: true
-  m: 512 # dimension of projected space
-  k: 64 # rank
+  m: 1024 # dimension of projected space
+  k: 128 # rank
   target_accept_rate: 0.40
   initial_threshold: 0.05
   controller_lr: 0.01
   burn_in: 300
   seed: 0
-  reorth_every: 64
-  k_topk: 64 # top-k logits for sparse sketch
-  random: true
+  reorth_every: 32
+  k_topk: 128 # top-k logits for sparse sketch
+  random: false # if true randomly drop batches to match target_accept_rate
 
 data:
   dataset_name: allenai/tulu-3-sft-mixture
