--- a/configs/quick_gemma3_1b_it.yaml
+++ b/configs/quick_gemma3_1b_it.yaml
@@ -1,4 +1,4 @@
-# Quick test config: Gemma-3-4B on 100k Tülu-3 subset
+# Quick test config: Gemma-3-1B-it on 256k Tülu-3 subset
 
 model:
   name: google/gemma-3-1b-it
@@ -7,7 +7,7 @@ model:
 training:
   output_dir: ./outputs/quick_gemma3_1b_it
   num_train_epochs: 1
-  max_steps: 2000
+  max_steps: 1000
   per_device_train_batch_size: 8
   gradient_accumulation_steps: 4
   gradient_checkpointing: false
@@ -20,10 +20,10 @@ training:
   max_grad_norm: 1.0
   logging_steps: 10
   save_strategy: steps
-  save_steps: 800
+  save_steps: 500
   save_total_limit: 2
   evaluation_strategy: steps
-  eval_steps: 200
+  eval_steps: 250
   load_best_model_at_end: false
   seed: 42
   dataloader_num_workers: 4
@@ -52,7 +52,7 @@ slora:
   target_accept_rate: 0.40
   initial_threshold: 0.05
   controller_lr: 0.01
-  burn_in: 300
+  burn_in: 100
   seed: 0
   reorth_every: 32
   k_topk: 128 # top-k logits for sparse sketch
