--- a/configs/baseline.yaml
+++ b/configs/baseline.yaml
@@ -1,5 +1,3 @@
-# Baseline LoRA config (no gating) for comparison
-
 model:
   name: google/gemma-3-1b-it
   use_flash_attention_2: false
@@ -7,7 +5,7 @@ model:
 training:
   output_dir: ./outputs/baseline_gemma3_1b_it
   num_train_epochs: 1
-  max_steps: 2000
+  max_steps: 10
   per_device_train_batch_size: 8
   gradient_accumulation_steps: 4
   gradient_checkpointing: false
@@ -23,12 +21,13 @@ training:
   save_steps: 500
   save_total_limit: 2
   evaluation_strategy: steps
-  eval_steps: 300
+  eval_steps: 5
   load_best_model_at_end: false
   seed: 42
   dataloader_num_workers: 4
   dataloader_pin_memory: true
   remove_unused_columns: false
+  padding_label: -100
 
 lora:
   r: 8
@@ -45,8 +44,8 @@ lora:
   bias: none
   task_type: CAUSAL_LM
 
-slora:
-  enable: false # Disable gating for baseline
+gating:
+  method: baseline
 
 data:
   dataset_name: allenai/tulu-3-sft-mixture
