make random and entropy inherit from flora

--- a/configs/entropy_gating_gemma3_1b_it.yaml
+++ b/configs/entropy_gating_gemma3_1b_it.yaml
@@ -1,11 +1,10 @@
-base: baseline.yaml
+base: flora_gemma3_1b_it.yaml
 
 training:
   output_dir: ./outputs/entropy_gating_gemma3_1b_it
 
 gating:
   method: entropy_gating
-  topk_tokens: 0.2
 
 logging:
   wandb_run_name: entropy_gating_gemma3_1b_it
