disable flash attention

--- a/configs/baseline.yaml
+++ b/configs/baseline.yaml
@@ -1,6 +1,6 @@
 model:
   name: google/gemma-3-1b-pt
-  use_flash_attention_2: true
+  use_flash_attention_2: false
 
 training:
   output_dir: ./outputs/baseline_gemma3_1b_pt
